# SequenceDiagramGenerator

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
SequenceDiagramGeneratorLibrary/: CMakeLists.txt
SequenceDiagramGeneratorLibrary/include/: ILogReadingStrategy.h  LogEntry.h  LogReader.h  TextLogReadingStrategy.h
SequenceDiagramGeneratorLibrary/src/: LogReader.cpp  TextLogReadingStrategy.cpp
SequenceDiagramGeneratorLibrary/test/: CMakeLists.txt  LogReaderTest.h
